# C_SDK_Example

./: C-SDK-Example.sln  C-SDK-Example.vcxproj  C-SDK-Example.vcxproj.filters  CMakeLists.txt  Makefile  README.md  build.gradle
extlibs/: .gitignore
src/main/cpp/: C_SDK_example.c
